--- a/Notebooke2.ipynb
+++ b/Notebooke2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN92sSQSSlncYLTG6G1ef1y",
+      "authorship_tag": "ABX9TyP27rY3ltcghdxOuz2vN9KF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,6 +217,279 @@
       ],
       "metadata": {
         "id": "RZLpuHyQih6p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "clean and preprocess the data"
+      ],
+      "metadata": {
+        "id": "JxRSn6j1RKjI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import re\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to count the number of messages sent per month\n",
+        "sql_query = '''\n",
+        "SELECT strftime('%Y-%m', date) AS month, COUNT(*) AS message_count\n",
+        "FROM Message\n",
+        "GROUP BY month\n",
+        "ORDER BY month\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df = pd.read_sql_query(sql_query, conn)\n",
+        "\n",
+        "# Define a cleaning function\n",
+        "def clean_text(text):\n",
+        "    cleaned_text = re.sub(r'[^a-zA-Z0-9\\s]', '', text)\n",
+        "    cleaned_text = re.sub(r'\\s+', ' ', cleaned_text)\n",
+        "    cleaned_text = cleaned_text.strip()\n",
+        "    cleaned_text = cleaned_text.lower()\n",
+        "    return cleaned_text\n",
+        "\n",
+        "# Apply cleaning function to the 'month' column\n",
+        "df['month'] = df['month'].apply(clean_text)\n",
+        "\n",
+        "# Convert 'month' column to datetime format\n",
+        "df['month'] = pd.to_datetime(df['month'])\n",
+        "\n",
+        "\n",
+        "# Sort the DataFrame by 'month' column\n",
+        "df.sort_values(by='month', inplace=True)\n",
+        "\n",
+        "# Set 'month' column as the DataFrame index\n",
+        "df.set_index('month', inplace=True)\n",
+        "\n",
+        "# Plot the volume of emails sent over time\n",
+        "plt.plot(df.index, df['message_count'])\n",
+        "plt.xlabel('Time')\n",
+        "plt.ylabel('Number of Messages')\n",
+        "plt.title('Volume of Emails Sent Over Time (Per Month)')\n",
+        "plt.xticks([], [])\n",
+        "\n",
+        "plt.grid(False)\n",
+        "plt.show()\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n"
+      ],
+      "metadata": {
+        "id": "ZuQapwQQRJ9r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# Get the cursor object\n",
+        "cur = conn.cursor()\n",
+        "\n",
+        "# Execute the PRAGMA command to retrieve the schema of the 'Message' table\n",
+        "cur.execute(\"PRAGMA table_info(Message)\")\n",
+        "\n",
+        "# Fetch all the rows returned by the query\n",
+        "rows = cur.fetchall()\n",
+        "\n",
+        "# Print the schema information\n",
+        "for row in rows:\n",
+        "    print(row)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n"
+      ],
+      "metadata": {
+        "id": "hbn1IjfKn6Vp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron_email.db')\n",
+        "\n",
+        "# Create a cursor object to execute SQL queries\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "# Retrieve the list of tables in the database\n",
+        "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+        "tables = cursor.fetchall()\n",
+        "\n",
+        "# Print the table names\n",
+        "for table in tables:\n",
+        "    print(table[0])\n",
+        "\n",
+        "# Print a message indicating the loop is finished\n",
+        "print(\"Table names retrieved successfully.\")\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4cLZzip3rYNd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron_email.db')\n",
+        "\n",
+        "# Create a cursor object to execute SQL queries\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "# Write SQL query to extract relevant information from the 'Message' table\n",
+        "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+        "tables = cursor.fetchall()\n",
+        "\n",
+        "# Fetch all rows from the query result\n",
+        "rows = cursor.fetchall()\n",
+        "\n",
+        "# Load the query results into a DataFrame\n",
+        "df = pd.DataFrame(rows, columns=[column[0] for column in cursor.description])\n",
+        "\n",
+        "# Perform data manipulation tasks on the DataFrame\n",
+        "# Example: Filtering messages sent after a specific date\n",
+        "filtered_df = df[df['date'] > '2002-01-01']\n",
+        "\n",
+        "# Example: Grouping messages by sender and calculating message count\n",
+        "grouped_df = df.groupby('sender').size().reset_index(name='message_count')\n",
+        "\n",
+        "# Print the filtered DataFrame\n",
+        "print(\"Filtered DataFrame:\")\n",
+        "print(filtered_df)\n",
+        "\n",
+        "# Print the grouped DataFrame\n",
+        "print(\"Grouped DataFrame:\")\n",
+        "print(grouped_df)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n"
+      ],
+      "metadata": {
+        "id": "aXhqSNNAucfK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import sqlite3\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron_email.db')\n",
+        "\n",
+        "# Create a cursor object to execute SQL queries\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "# Write the SQL query\n",
+        "SQL = '''\n",
+        "SELECT * FROM Message\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a DataFrame\n",
+        "message_df = pd.read_sql_query(SQL, conn)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Perform data manipulation tasks on the DataFrame\n",
+        "# Example 1: Filtering\n",
+        "filtered_df = message_df[message_df['sender'] == 'specific_value']\n",
+        "\n",
+        "# Example 2: Grouping and aggregation\n",
+        "grouped_df = message_df.groupby('sender').size().reset_index(name='message_count')\n",
+        "\n",
+        "# Example 3: Aggregation\n",
+        "max_length = message_df['message_length'].max()\n",
+        "\n",
+        "# Print the filtered DataFrame\n",
+        "print(\"Filtered DataFrame:\")\n",
+        "print(filtered_df.head())\n",
+        "\n",
+        "# Print the grouped DataFrame\n",
+        "print(\"Grouped DataFrame:\")\n",
+        "print(grouped_df.head())\n",
+        "\n",
+        "# Print the maximum message length\n",
+        "print(\"Maximum message length:\", max_length)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wioOAnfFymYp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to count the number of messages sent per month\n",
+        "sql_query = '''\n",
+        "SELECT strftime('%Y-%m', date) AS month, COUNT(*) AS message_count\n",
+        "FROM Message\n",
+        "GROUP BY month\n",
+        "ORDER BY month\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df = pd.read_sql_query(sql_query, conn)\n",
+        "\n",
+        "# Set the 'month' column as the DataFrame index\n",
+        "df.set_index('month', inplace=True)\n",
+        "\n",
+        "# Create the time series line chart\n",
+        "plt.plot(df.index, df['message_count'])\n",
+        "plt.xlabel('Time')\n",
+        "plt.ylabel('Number of Messages')\n",
+        "plt.title('Volume of Emails Sent Over Time (Per Month)')\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n"
+      ],
+      "metadata": {
+        "id": "af0Ivtz_dSJ-"
       },
       "execution_count": null,
       "outputs": []
