--- a/THE_REPORT_NOTEBOOK_(completed)_.ipynb
+++ b/THE_REPORT_NOTEBOOK_(completed)_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMjT1Fre2ay6EJGiDcc9oCM",
+      "authorship_tag": "ABX9TyMPWpK7+L6yvss9blCC9okN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Enron**"
+        "#NoteBook as Business Report\n",
+        "#ISYS2001 Introduction To Business Programming\n",
+        "#Thi Kieu Oanh Ha - 21131606\n",
+        "#Friday, 26th May 2022 (23:59)"
+      ],
+      "metadata": {
+        "id": "o-SISpKHeZeC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Enron Emails Analysis**"
       ],
       "metadata": {
         "id": "Xr4gH0EEU7-F"
@@ -385,6 +397,70 @@
     {
       "cell_type": "markdown",
       "source": [
+        "####Cleaned Code\n",
+        "Here's the code to clean and preprocess the data and visualize the volume of emails sent over time"
+      ],
+      "metadata": {
+        "id": "t9JNb2kCd5XP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.dates as mdates\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to count the number of messages sent per month\n",
+        "sql_query = '''\n",
+        "SELECT strftime('%Y-%m', date) AS month, COUNT(*) AS message_count\n",
+        "FROM Message\n",
+        "GROUP BY month\n",
+        "ORDER BY month\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df = pd.read_sql_query(sql_query, conn)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Plot the volume of emails sent over time\n",
+        "plt.figure(figsize=(15, 6))\n",
+        "plt.plot(df['month'], df['message_count'])\n",
+        "plt.xlabel('Time')\n",
+        "plt.ylabel('Number of Messages')\n",
+        "plt.title('Volume of Emails Sent Over Time (Per Month)')\n",
+        "\n",
+        "# Format the x-axis as months\n",
+        "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m'))\n",
+        "plt.gca().xaxis.set_major_locator(mdates.MonthLocator())\n",
+        "\n",
+        "plt.grid(False)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "WaCSLcDjgahO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Based on the above grapgh, insights into the dynamics of email communication within the Enron dataset can be gained by visualising the volume of emails sent over time using this analysis. To be more specific, The number of emails with the highest score between February and March reached nearly 30000. Therefore, it can aid in locating peaks in activity, illuminating patterns in communication, and providing a foundation for analysis and research into the Enron email dataset."
+      ],
+      "metadata": {
+        "id": "joiBLU5jg_DR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Top senders and recipients"
       ],
       "metadata": {
@@ -520,6 +596,76 @@
     {
       "cell_type": "markdown",
       "source": [
+        "####cleaned code\n",
+        "\n",
+        "With the help of the finished code provided by chat GPT, I was able to successfully connect to the Enron Email SQLite database and retrieve the sender and recipient information by means of SQL queries. Two Pandas DataFrames (df senders and df recipients) are used to store the results. I then proceed to preprocess and clean the data further. In the provided example, I use the dropna() method to get rid of rows with null values and the str.lower() method to change the case of the email column. When processing is complete, the console receives the cleaned and preprocessed data."
+      ],
+      "metadata": {
+        "id": "J3JpgS6FYarH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to retrieve the sender information\n",
+        "sql_query_senders = '''\n",
+        "SELECT sender AS email, COUNT(*) AS frequency\n",
+        "FROM Message\n",
+        "GROUP BY email\n",
+        "ORDER BY frequency DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df_senders = pd.read_sql_query(sql_query_senders, conn)\n",
+        "\n",
+        "# SQL query to retrieve the recipient information\n",
+        "sql_query_recipients = '''\n",
+        "SELECT rvalue AS email, COUNT(*) AS frequency\n",
+        "FROM Recipientinfo\n",
+        "GROUP BY email\n",
+        "ORDER BY frequency DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into another Pandas DataFrame\n",
+        "df_recipients = pd.read_sql_query(sql_query_recipients, conn)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Perform additional data cleaning or preprocessing steps\n",
+        "# Example: Remove any rows with missing values\n",
+        "df_senders.dropna(inplace=True)\n",
+        "df_recipients.dropna(inplace=True)\n",
+        "\n",
+        "# Example: Convert email column to lowercase\n",
+        "df_senders['email'] = df_senders['email'].str.lower()\n",
+        "df_recipients['email'] = df_recipients['email'].str.lower()\n",
+        "\n",
+        "# Print the cleaned and preprocessed data\n",
+        "print(\"Most Frequent Email Senders:\")\n",
+        "print(df_senders)\n",
+        "\n",
+        "print(\"\\nMost Frequent Email Recipients:\")\n",
+        "print(df_recipients)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "naxfGG00Y9EC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "This code snippet demonstrates how to create 2 horizontal bar charts with subplots using Matplotlib."
       ],
       "metadata": {
@@ -615,6 +761,55 @@
     {
       "cell_type": "markdown",
       "source": [
+        "####Cleaned Code\n",
+        "In this code, I put the above code in chat GPT and ask it give me a cleaned code by connecting to the Enron Email SQLite database, perform data cleaning and preprocessing steps (such as dropping missing values and removing duplicates), and then plot the cleaned and preprocessed data."
+      ],
+      "metadata": {
+        "id": "Y66ZmNwzancw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import sqlite3\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# Perform data cleaning and preprocessing steps\n",
+        "# Query the data from the database\n",
+        "query = \"SELECT rtype, COUNT(*) AS count FROM Recipientinfo GROUP BY rtype\"\n",
+        "df = pd.read_sql_query(query, conn)\n",
+        "\n",
+        "# Drop missing values\n",
+        "df = df.dropna()\n",
+        "\n",
+        "# Remove duplicates\n",
+        "df = df.drop_duplicates()\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Plot the cleaned and preprocessed data\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "plt.bar(df['rtype'], df['count'])\n",
+        "plt.xlabel('Recipient Type')\n",
+        "plt.ylabel('Number of Emails')\n",
+        "plt.title('Proportion of Emails by Recipient Type')\n",
+        "plt.xticks(rotation=0)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "PtBIzADLbMW-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The resulting bar chart shows how many emails were sent to each recipient category. Insights into the communication patterns and distribution of emails among various recipient categories can be gained by comparing and identifying the most common recipient types in the dataset."
       ],
       "metadata": {
@@ -691,7 +886,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## References:"
+        "## References:\n",
+        "\n",
+        "\n",
+        "\n",
+        "* Data Cleaning and Preprocessing - https://medium.com/analytics-vidhya/data-cleaning-and-preprocessing-a4b751f4066f\n",
+        "\n",
+        "* Vasiliev, 2021 - https://blogs.oracle.com/connect/post/run-sql-data-queries-pandas\n",
+        "\n",
+        "* Praveer, 2015 - https://www.studocu.com/en-au/document/macquarie-university/accountants-in-the-profession/enron-case/1633970\n",
+        "\n",
+        "\n",
+        "\n",
+        "* Dickson, 2020 - https://www.freecodecamp.org/news/connect-python-with-sql/\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "6oVsEkoLk_3Q"
