--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMMRx1uQySOOrfPGJDo//vF",
+      "authorship_tag": "ABX9TyOnDhhL/lEhAZ/abqotj0ie",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**how to download the data**"
+      ],
+      "metadata": {
+        "id": "a0-6WQNssBmO"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -35,14 +44,38 @@
       },
       "outputs": [],
       "source": [
-        "#here is how I download the data\n",
+        "\n",
         "!wget -O enron.db https://curtin-my.sharepoint.com/:u:/g/personal/211934g_curtin_edu_au/EaYagsqa2r1Bi5wtHbswGFwBH2kd2uTnz6rlka7GI36GUQ?download=1"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "There is a combination of two parts:\n",
+        "\n",
+        "\n",
+        "* The first portion, \"!wget -O enron.db,\" is a command used in Jupyter Notebook and other environments to download a file from a given URL and save it under the given name. The programme will try to retrieve a file from the specified location (URL) and save it in the 'enron.db' format.\n",
+        "\n",
+        "* The second part of the code,' \"\" ' is a literal empty string. However, it appears to be placed irrelevantly outside of the code block. This has no effect on how the code is run.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "AtRlFtlRsOM9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**connect to the databases**"
+      ],
+      "metadata": {
+        "id": "4NdHK2fTs84Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#here is how I connect to the databases\n",
+        "\n",
         "import sqlite3\n",
         "con = sqlite3.connect('enron.db')\n",
         "cur = con.cursor()"
@@ -54,9 +87,40 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Based on above code, I will demonstrates how to connect to an SQLite database named 'enron.db' by using Python and the sqlite3 library.\n",
+        "\n",
+        "\n",
+        "1. the sqlite3 module is imported, which provides the necessary functions and classes for working with SQLite databases.\n",
+        "\n",
+        "2. The 'enron.db' database file is accessed via the sqlite3.connect() function. This function accepts the file path to a database as an argument and returns an object that acts as a connection to that database.\n",
+        "\n",
+        "3. By asserting con.cursor(), we can make a cursor object that can be used to run SQL queries and retrieve data. The variable cur now stores the cursor object.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "sxPt3mUjolac"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Load a table**\n",
+        "I just use the below code that the way how I load a table. To be more specific, It specifies a SQL query string that retrieves data from every column in the 'Recipientinfo' table. The SQL query is then sent to the SQLite database associated with the 'enron.db' file via the cursor object 'cur'. The 'pandas' library, abbreviated 'pd,' is then imported so that tabular data can be worked with. It runs the same SQL query and imports the results into a pandas DataFrame called \"Recipientinfo df\" using the \"read sql query()\" function. The result of the SQL query is stored in the 'Recipientinfo df' data frame, which is displayed at the end of the code. Data from the 'Recipientinfo' table can be viewed and analysed in a tabular format."
+      ],
+      "metadata": {
+        "id": "ZOIrktj4qPkh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#here us how i load a table \n",
+        "\n",
         "SQL='''\n",
         "SELECT * FROM Recipientinfo\n",
         "\n",
@@ -73,6 +137,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "this code can be seen as another way to load a table from an SQLite database into a pandas DataFrame."
+      ],
+      "metadata": {
+        "id": "q7o07H-4rRC-"
+      }
     },
     {
       "cell_type": "code",
@@ -105,6 +178,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Im using \" head()\" funtion to Display the first 5 lines"
+      ],
+      "metadata": {
+        "id": "AEoETknvmC-a"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#here us how i load a table \n",
@@ -128,7 +210,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "làm sạch và xử data và addressing gtri bị missing or k nhất quán"
+        "\n",
+        "I'm trying to run a piece of code for the purpose of \" clean text \""
       ],
       "metadata": {
         "id": "KyYlsJBVAx_D"
@@ -169,6 +252,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "trying with another table ( Recipientinfo table)"
+      ],
+      "metadata": {
+        "id": "C3qVZzoOmmd2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import re\n",
@@ -206,38 +298,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "perform data manipulation tasks"
+        "#**Analyses and Visualisation**\n",
+        "\n",
+        "\n",
+        "## Email Traffic Over Time"
       ],
       "metadata": {
-        "id": "dshrdqlhAv7B"
+        "id": "4tjHqYphIVLf"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import re\n",
-        "\n",
-        "def clean(text):\n",
-        "  ''' Uses regular expresison to extract english letter and digits from the supplied text. '''\n",
-        "  regExp = \"(@[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+:\\/\\/\\S+)\"\n",
-        "  return ' '.join(re.sub(regExp, \" \", text).split())\n",
-        "\n",
-        "tweet_df = message_df[['date','recipientinfo','message_id']]\n",
-        "tweet_df.head(10)"
-      ],
-      "metadata": {
-        "id": "NlkxM8BJAPm2"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "this code for Email Traffic Over Time"
+        "this below code which was provided by ChatHungging. it performs an analysis of the volume of emails sent over time using data from the Enron Email SQLite database. However, as seen in the resulting graph, at the x-axis not showing the timeline."
       ],
       "metadata": {
-        "id": "4tjHqYphIVLf"
+        "id": "6sKmlUCPnBCW"
       }
     },
     {
@@ -286,13 +362,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "To fix the above code error, I searched and asked for help from gpt chat. it gave me a below code."
+      ],
       "metadata": {
-        "id": "wB9rwN9-GXtw"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "XLq765byn8uU"
+      }
     },
     {
       "cell_type": "code",
@@ -344,7 +420,63 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Top senders and recipients"
+        "###Cleaned code\n",
+        "Im trying to clean the data and Here's the code to clean and preprocess the data and visualize the volume of emails sent over time"
+      ],
+      "metadata": {
+        "id": "LSyxibFYWWeo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.dates as mdates\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to count the number of messages sent per month\n",
+        "sql_query = '''\n",
+        "SELECT strftime('%Y-%m', date) AS month, COUNT(*) AS message_count\n",
+        "FROM Message\n",
+        "GROUP BY month\n",
+        "ORDER BY month\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df = pd.read_sql_query(sql_query, conn)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Plot the volume of emails sent over time\n",
+        "plt.figure(figsize=(15, 6))\n",
+        "plt.plot(df['month'], df['message_count'])\n",
+        "plt.xlabel('Time')\n",
+        "plt.ylabel('Number of Messages')\n",
+        "plt.title('Volume of Emails Sent Over Time (Per Month)')\n",
+        "\n",
+        "# Format the x-axis as months\n",
+        "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m'))\n",
+        "plt.gca().xaxis.set_major_locator(mdates.MonthLocator())\n",
+        "\n",
+        "plt.grid(False)\n",
+        "plt.show()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XkJTo4FSVkHD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Top senders and recipients"
       ],
       "metadata": {
         "id": "vpBzJdC5JowX"
@@ -403,6 +535,134 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The data has been cleaned and is included in the below code. Pandas DataFrames df senders and df recipients are populated with the top email senders and receivers from the Enron Email SQLite database. The data has been cleaned and processed and is now stored in these DataFrames, ready for further examination and visualisation. To retrieve both sender and receiver details, the code runs two separate SQL queries. Next, we use pd.read sql query to import the outcomes into the DataFrames df senders and df recipients."
+      ],
+      "metadata": {
+        "id": "Fh464iTvcv0H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to retrieve the sender information\n",
+        "sql_query_senders = '''\n",
+        "SELECT sender AS email, COUNT(*) AS frequency\n",
+        "FROM Message\n",
+        "GROUP BY email\n",
+        "ORDER BY frequency DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df_senders = pd.read_sql_query(sql_query_senders, conn)\n",
+        "\n",
+        "# SQL query to retrieve the recipient information\n",
+        "sql_query_recipients = '''\n",
+        "SELECT rvalue AS email, COUNT(*) AS frequency\n",
+        "FROM Recipientinfo\n",
+        "GROUP BY email\n",
+        "ORDER BY frequency DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into another Pandas DataFrame\n",
+        "df_recipients = pd.read_sql_query(sql_query_recipients, conn)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Print the most frequent email senders\n",
+        "print(\"Most Frequent Email Senders:\")\n",
+        "print(df_senders)\n",
+        "\n",
+        "# Print the most frequent email recipients\n",
+        "print(\"\\nMost Frequent Email Recipients:\")\n",
+        "print(df_recipients)"
+      ],
+      "metadata": {
+        "id": "L3E8g48uczNu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####cleaned code\n",
+        "\n",
+        "However, With the help of the finished code provided by chat GPT, I was able to successfully connect to the Enron Email SQLite database and retrieve the sender and recipient information by means of SQL queries. Two Pandas DataFrames (df senders and df recipients) are used to store the results. I then proceed to preprocess and clean the data further. In the provided example, I use the dropna() method to get rid of rows with null values and the str.lower() method to change the case of the email column. When processing is complete, the console receives the cleaned and preprocessed data."
+      ],
+      "metadata": {
+        "id": "FRpLXAfPY1Bk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# SQL query to retrieve the sender information\n",
+        "sql_query_senders = '''\n",
+        "SELECT sender AS email, COUNT(*) AS frequency\n",
+        "FROM Message\n",
+        "GROUP BY email\n",
+        "ORDER BY frequency DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into a Pandas DataFrame\n",
+        "df_senders = pd.read_sql_query(sql_query_senders, conn)\n",
+        "\n",
+        "# SQL query to retrieve the recipient information\n",
+        "sql_query_recipients = '''\n",
+        "SELECT rvalue AS email, COUNT(*) AS frequency\n",
+        "FROM Recipientinfo\n",
+        "GROUP BY email\n",
+        "ORDER BY frequency DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "# Execute the query and load results into another Pandas DataFrame\n",
+        "df_recipients = pd.read_sql_query(sql_query_recipients, conn)\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Perform additional data cleaning or preprocessing steps\n",
+        "# Example: Remove any rows with missing values\n",
+        "df_senders.dropna(inplace=True)\n",
+        "df_recipients.dropna(inplace=True)\n",
+        "\n",
+        "# Example: Convert email column to lowercase\n",
+        "df_senders['email'] = df_senders['email'].str.lower()\n",
+        "df_recipients['email'] = df_recipients['email'].str.lower()\n",
+        "\n",
+        "# Print the cleaned and preprocessed data\n",
+        "print(\"Most Frequent Email Senders:\")\n",
+        "print(df_senders)\n",
+        "\n",
+        "print(\"\\nMost Frequent Email Recipients:\")\n",
+        "print(df_recipients)\n"
+      ],
+      "metadata": {
+        "id": "RwnMvi3ScWPr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "creating two horizontal bar charts"
       ],
       "metadata": {
@@ -454,7 +714,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Email Distribution by Recipient Type"
+        "##Email Distribution by Recipient Type"
       ],
       "metadata": {
         "id": "yGV47I2jMT76"
@@ -482,6 +742,54 @@
       ],
       "metadata": {
         "id": "y7vPe99UMX5j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###cleaned code for Email distribution"
+      ],
+      "metadata": {
+        "id": "_LfsgAc4bXbf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import sqlite3\n",
+        "\n",
+        "# Connect to the Enron Email SQLite database\n",
+        "conn = sqlite3.connect('enron.db')\n",
+        "\n",
+        "# Perform data cleaning and preprocessing steps\n",
+        "# Query the data from the database\n",
+        "query = \"SELECT rtype, COUNT(*) AS count FROM Recipientinfo GROUP BY rtype\"\n",
+        "df = pd.read_sql_query(query, conn)\n",
+        "\n",
+        "# Drop missing values\n",
+        "df = df.dropna()\n",
+        "\n",
+        "# Remove duplicates\n",
+        "df = df.drop_duplicates()\n",
+        "\n",
+        "# Close the database connection\n",
+        "conn.close()\n",
+        "\n",
+        "# Plot the cleaned and preprocessed data\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "plt.bar(df['rtype'], df['count'])\n",
+        "plt.xlabel('Recipient Type')\n",
+        "plt.ylabel('Number of Emails')\n",
+        "plt.title('Proportion of Emails by Recipient Type')\n",
+        "plt.xticks(rotation=0)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "uz3KaKnsbfiy"
       },
       "execution_count": null,
       "outputs": []
