--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOnDhhL/lEhAZ/abqotj0ie",
+      "authorship_tag": "ABX9TyPqVBoqryJuMCnyV5R1nWJF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -823,6 +823,53 @@
       ],
       "metadata": {
         "id": "_Nm6irLsOsYd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#word cloud"
+      ],
+      "metadata": {
+        "id": "L6tNO1jQBfor"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "this code facilitates the creation of a visually appealing word cloud representation based on the provided text data, offering a quick and intuitive way to observe the frequency and importance of different words within the collection of messages."
+      ],
+      "metadata": {
+        "id": "68mjpKLtSR33"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!curl -Ol https://raw.githubusercontent.com/michael-borck/isys2001-worksheets/main/stopwords.py\n",
+        "# Libraries\n",
+        "from wordcloud import WordCloud\n",
+        "import matplotlib.pyplot as plt\n",
+        "from stopwords import ENGLISH_STOP_WORDS\n",
+        "\n",
+        "# Get all the messages\n",
+        "messages = ' '.join(message_df['body'])\n",
+        "\n",
+        "#stop_words = ENGLISH_STOP_WORDS.add(search_term)    \n",
+        "# Create the wordcloud object\n",
+        "wordcloud = WordCloud(width=680, height=480, margin=0, \n",
+        "                      stopwords=ENGLISH_STOP_WORDS).generate(messages)\n",
+        "\n",
+        "# Display the generated image:\n",
+        "plt.imshow(wordcloud, interpolation='bilinear')\n",
+        "plt.axis(\"off\")\n",
+        "plt.margins(x=0, y=0)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "bNdfSdyxBuzP"
       },
       "execution_count": null,
       "outputs": []
